# solaguard-mcp-server

./: .gitignore  Makefile  README.md  pyproject.toml  run_tests.py
.kiro/specs/solaguard-mcp-server/: design.md  requirements-gemini.md  requirements.md  tasks.md
data/: .gitkeep  bible_mock.db
scripts/: .gitkeep  generate_mock_data.py
src/solaguard/: __init__.py  server.py
src/solaguard/context/: __init__.py  theological.py
src/solaguard/database/: __init__.py  connection.py  schema.py
src/solaguard/tools/: __init__.py  reference_parser.py  scripture_search.py  verse_retrieval.py
src/solaguard/validation/: __init__.py  reference_validator.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_database_connection.py  test_database_schema.py  test_reference_parser.py  test_scripture_search.py  test_server.py  test_theological_context.py  test_validation.py  test_verse_retrieval.py
tests/integration/: __init__.py  test_full_integration.py  test_mcp_protocol.py
tests/manual/: __init__.py  test_quick_check.py
